--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
   "scripts": {
     "serve": "vite --host",
     "build": "vue-tsc --noEmit && vite build",
-    "lint": "eslint --ext .js,.jsx,.vue src --fix",
-    "lint:staged": "lint-staged",
-    "cz": "npm run log && git add . && git cz",
-    "log": "conventional-changelog --config ./node_modules/vue-cli-plugin-commitlint/lib/log -i CHANGELOG.md -s -r 0",
+    "lint": "eslint --ext .js,.jsx,.vue src --fix --cache",
+    "cz": "git add . && git cz",
     "prepare": "husky install",
-    "preinstall": "npx only-allow pnpm",
-    "commitlint": "commitlint --config commitlint.config.mjs -e -V"
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "axios": "^1.6.3",
@@ -26,29 +23,41 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@types/node": "^20.10.6",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@vitejs/plugin-vue": "^5.0.2",
     "commitizen": "^4.3.0",
-    "commitlint": "^17.7.1",
-    "conventional-changelog-cli": "^4.1.0",
+    "commitlint-config-cz": "^0.13.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "cz-customizable": "^7.0.0",
     "eslint": "^8.56.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.19.2",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
-    "vue-cli-plugin-commitlint": "^1.0.12",
+    "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^1.8.27"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/vue-cli-plugin-commitlint/lib/cz"
-    }
   },
   "lint-staged": {
     "src/**/*.{js,jsx,vue,ts,tsx}": [
       "eslint --fix",
       "git add"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": ".cz-config.cjs"
+    }
   },
   "engines": {
     "npm": ">=10.0.0",
