👷 ci:(custom): 添加changelog

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "serve": "vite --host",
     "build": "vue-tsc --noEmit && vite build",
     "lint": "eslint --ext .js,.jsx,.vue src --fix --cache",
-    "cz": "git add . && git cz",
+    "cz": "npm run log && git add . && git cz",
+    "log": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "prepare": "husky install",
     "preinstall": "npx only-allow pnpm"
   },
@@ -30,6 +31,7 @@
     "@vitejs/plugin-vue": "^5.0.2",
     "commitizen": "^4.3.0",
     "commitlint-config-cz": "^0.13.3",
+    "conventional-changelog-cli": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
     "eslint": "^8.56.0",
