--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "@orillusion/core": "^0.7.1",
+    "@orillusion/stats": "^0.2.2",
     "axios": "^1.6.3",
     "element-plus": "^2.4.4",
     "pinia": "^2.1.7",
